--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "npm": ">= 3.0.0"
   },
   "browserslist": [
-    "last 1 major version",
-    ">= 1%",
+    "> 1%",
+    "last 2 versions",
     "Chrome >= 45",
     "Firefox >= 38",
     "Edge >= 12",
