--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "express": "^4.16.4",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.1.1",
