--- a/package.json
+++ b/package.json
@@ -74,13 +74,6 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "Chrome >= 45",
-    "Firefox >= 38",
-    "Edge >= 12",
-    "Explorer >= 10",
-    "iOS >= 9",
-    "Safari >= 9",
-    "Android >= 4.4",
-    "Opera >= 30"
+    "not ie <= 8"
   ]
 }
